partially reflexive graphs are now without duplicates (except for labeling)